# openh264

./: CMakeLists.txt
codec/api/svc/: codec_app_def.h
codec/common/inc/: macros.h  memory_align.h  typedefs.h  welsCodecTrace.h
codec/common/src/: memory_align.cpp  utils.cpp  welsCodecTrace.cpp
codec/console/dec/inc/: d3d9_utils.h
codec/console/dec/src/: d3d9_utils.cpp  h264dec.cpp
codec/console/enc/src/: h264encoder.cpp
codec/decoder/core/inc/: au_parser.h  cabac_decoder.h  deblocking.h  dec_golomb.h  decode_slice.h  decoder.h  decoder_context.h  decoder_core.h  error_concealment.h  fmo.h  manage_dec_ref.h  memmgr_nal_unit.h  parse_mb_syn_cabac.h  parse_mb_syn_cavlc.h  rec_mb.h
codec/decoder/core/src/: au_parser.cpp  cabac_decoder.cpp  deblocking.cpp  decode_slice.cpp  decoder.cpp  decoder_core.cpp  error_concealment.cpp  fmo.cpp  manage_dec_ref.cpp  memmgr_nal_unit.cpp  parse_mb_syn_cabac.cpp  parse_mb_syn_cavlc.cpp  pic_queue.cpp  rec_mb.cpp
codec/decoder/plus/inc/: OpenH264Decoder.hpp
codec/decoder/plus/src/: OpenH264Decoder.cpp  welsDecoderExt.cpp
codec/encoder/core/inc/: encoder.h  encoder_context.h  extern.h  param_svc.h  picture_handle.h  svc_enc_slice_segment.h  svc_encode_slice.h  svc_motion_estimate.h  wels_const.h  wels_preprocess.h
codec/encoder/core/src/: deblocking.cpp  decode_mb_aux.cpp  encoder.cpp  encoder_ext.cpp  md.cpp  paraset_strategy.cpp  picture_handle.cpp  ratectl.cpp  ref_list_mgr_svc.cpp  sample.cpp  slice_multi_threading.cpp  svc_base_layer_md.cpp  svc_enc_slice_segment.cpp  svc_encode_mb.cpp  svc_encode_slice.cpp  svc_mode_decision.cpp  svc_motion_estimate.cpp  svc_set_mb_syn_cabac.cpp  svc_set_mb_syn_cavlc.cpp  wels_preprocess.cpp  wels_task_management.cpp
codec/encoder/plus/inc/: OpenH264Encoder.hpp
codec/encoder/plus/src/: OpenH264Encoder.cpp  welsEncoderExt.cpp
codec/processing/interface/: IWelsVP.h  Strategy.hpp
codec/processing/src/adaptivequantization/: AdaptiveQuantization.h
codec/processing/src/backgrounddetection/: BackgroundDetection.cpp  BackgroundDetection.h
codec/processing/src/common/: WelsFrameWork.cpp  WelsFrameWork.h  WelsFrameWorkEx.cpp  common.h  util.h
codec/processing/src/complexityanalysis/: ComplexityAnalysis.h
codec/processing/src/denoise/: denoise.cpp  denoise.h
codec/processing/src/downsample/: downsample.cpp  downsample.h
codec/processing/src/imagerotate/: imagerotate.h
codec/processing/src/scenechangedetection/: SceneChangeDetection.h
codec/processing/src/scrolldetection/: ScrollDetection.h
codec/processing/src/vaacalc/: vaacalculation.h
